# mgc-checker

./: .npmignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: pre-commit.js  publish-darwin-arm64.js
src/: checker.rs  lib.rs
tests/: checker.test.js
